<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context="com.foo.digitalcampus.UserInfoActivity">
    <RelativeLayout
        android:background="@color/infoBlueColor"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/tvBack"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="返回"
            android:textSize="25sp"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/tvEdit"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="编辑"
            android:textColor="@color/white"
            android:layout_alignParentRight="true"
            android:textSize="25sp"/>
    </RelativeLayout>



    <ImageView
        android:id="@+id/ivPhoto"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/ic_launcher"/>
    <LinearLayout
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"/>
        <EditText
            android:layout_marginLeft="20dp"
            android:id="@+id/etUsername"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stuNum"/>
        <EditText
            android:layout_marginLeft="20dp"
            android:id="@+id/etStuNum"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/department"/>
        <EditText
            android:layout_marginLeft="20dp"
            android:id="@+id/etDepartment"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"/>
        <EditText
            android:layout_marginLeft="20dp"
            android:id="@+id/etPhone"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mail"/>
        <EditText
            android:layout_marginLeft="20dp"
            android:id="@+id/etMail"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="50dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="提交"
            android:onClick="commit"
            android:layout_alignParentRight="true"
            android:layout_marginRight="50dp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="保存"
            android:onClick="save"
            android:layout_marginLeft="50dp"/>
    </RelativeLayout>
</LinearLayout>
